# uc207

./: Cargo.toml  readme.md
data/: config.json  prompt_template.txt
data/characters/: template.json
src/: botmanager.rs  main.rs
src/commands/: fence.rs  invite.rs  list.rs  mod.rs  uninvite.rs
src/textgen/: api.rs  character.rs  mod.rs
