[package]
name = "uc207"
version = "0.1.0"
authors = ["Jonathan <jmontineri@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7.20"
http = "0.2.9"
rand = "0.8.5"
regex = "1.7.3"
reqwest = "0.11.16"
serde = "1.0.160"
serde_json = "1.0.96"
serenity = {version = "0.11", default-features = false, features = ["builder", "cache", "client", "gateway", "http", "utils", "rustls_backend", "model"] }
string-error = "0.1.0"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
